Fix "invalid" inputs on Firefox

--- a/css/dark/style.css
+++ b/css/dark/style.css
@@ -39,6 +39,10 @@ input, select {
         width: 5em;
     }
 
+    input:invalid {
+        box-shadow: none;
+    }
+
 .mod-select {
     min-width: 90px;
 }
